<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/lightBackground"
            android:clickable="true"
            android:fillViewport="true"
            android:padding="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_list_row_bg"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/fragment_todo_details_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                android:maxLength="25"
                android:maxLines="1"
                android:textSize="@dimen/text_big"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            >

            <EditText
                android:id="@+id/fragment_todo_details_et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:maxLength="150"
                android:maxLines="5"
                android:textSize="@dimen/text_big"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_priority"
                android:textSize="@dimen/text_big"
                />

            <Spinner
                android:id="@+id/fragment_todo_details_spn_priority"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_todo_details_ll_date_container"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textSize="@dimen/text_big"
                />

            <TextView
                android:id="@+id/fragment_todo_details_tv_date"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:drawableEnd="@android:drawable/ic_menu_my_calendar"
                android:drawableRight="@android:drawable/ic_menu_my_calendar"
                android:gravity="center_vertical"
                android:text="@string/ddmmyy"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_big"
                android:textStyle="italic"
                />
        </LinearLayout>

        <Button
            android:id="@+id/fragment_todo_details_btn_save_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/drawable_button_bg"
            android:padding="10dp"
            android:text="@string/save_todo"
            android:textColor="@android:color/white"
            />
    </LinearLayout>
</ScrollView>